Revert "Fix footer spacing and home page images"
This reverts commit 4bdec18c39b72d45757f7ba2bb79199c47699637.

--- a/css/global.css
+++ b/css/global.css
@@ -55,7 +55,6 @@ body {
 	display: flex;
 	flex-direction: column;
 	overflow: auto;
-	margin-bottom: 10%;
 }
 
 .footer {
