--- a/studentRecords/studentrecords.css
+++ b/studentRecords/studentrecords.css
@@ -30,13 +30,13 @@ button:hover {
 
 .content{
     text-align: center;
-    margin: 5% 0 10%;
+    margin-top:4%;
 }
 
 #wrapper{
     margin-top:4%;
     display: flex;
-    justify-content: center;
+    justify-content: center; 
 }
 
 .support{
